2011-01-26  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/psi-rho-funs.R (psiFunc, chgDefaults): default arguments are
	now also set for the E... slots
	* tests/psi-rho-etc.R: updated comments
	* tests/psi-rho-etc.Rout.save: updated accordingly

2011-01-20  Manuel Koller  <koller@stat.math.ethz.ch>

	Updated reference to Koller and Stahel 2011 paper.

	* man/lmrob.control.Rd: updated reference. KS2010 -> KS2011.
	* man/lmrob.Rd: see above
	* inst/doc/lmrob_simulation.bib: updated ks2011 reference.
	* inst/doc/lmrob_simulation.Rnw: see above
	* R/lmrob.MM.R (lmrob.control): setting argument: KS2011 instead of
	KS2010

2011-01-18  Manuel Koller  <koller@stat.math.ethz.ch>

	* tests/psi-rho-etc.R: added tests to document bug in psi_func
	class and pmin2/pmax2 functions.
	* tests/psi-rho-etc.Rout.save: results as they should be

	* inst/doc/lmrob_simulation.Rnw: added table with tuning constants
	used in simulation.

2010-12-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/qnsn.R (Qn): even better finite sample correction,
	from an analysis of a Qn simulation.
	(Qn.old): provide, if needed for back-compatibility.

2010-12-02  Valentin Todorov  <valentin.todorov@chello.at>

	* R/ltsReg.R, man/ltsReg.Rd, tests/LTS-specials.R: the raw weights
	'raw.weights' added to the returned object

	* R/ltsReg.R, src/rfltsreg.f, man/ltsReg.Rd: options nsamp="exact"
	and nsamp="best" fixed; Added 'trace' parameter

2010-12-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/mc-strict.R (adjOutlyingness): adapt tests to the fixed
	mc() code; using some tolerance... still need to be tested on Win/Mac/..

	* R/nlrob.R (summary.nlrob): do not compute 'se' if not converged;
	update help page;
	(print.summary.nlrob): print  "non-convergence"

	* man/summary.nlrob.Rd, man/predict.lmrob.Rd, ..: update and
	trivial changes.

	* R/qnsn.R (Qn): fixed the consistency constant (thanks to Peter
	Ruckdeschel), slightly adapting the finite sample factors for n = 2:9.
