@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.7-0
-Date: 2010-12-04
+Version: 0.7-1
+Date: 2011-01-28
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
